actualizo proyecto final

--- a/ejemplo/templates/ejemplo/buscar.html
+++ b/ejemplo/templates/ejemplo/buscar.html
@@ -15,5 +15,7 @@ Buscar Familiares
     <ul>
         <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}</li>
     </ul>
+
+    <a href="/mi-familia">Volver a la lista de familia</a>
 {% endfor %}
 {% endblock %}
