--- a/ejemplo/templates/ejemplo/familiares.html
+++ b/ejemplo/templates/ejemplo/familiares.html
@@ -1,9 +1,14 @@
 {% extends 'ejemplo/base.html' %}
 {% block titulo %} Lista de Familiares {% endblock %}
 {% block contenido %}
-  {% for familiar in lista_familiares %}
-      <ul>
-          <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}</li>
-      </ul>
-  {% endfor %}
+     <a href="/mi-familia/alta">Nuevo Familiar</a>
+     <ul>
+     {% for familiar in lista_familiares %}
+         <li>
+             Id: {{familiar.id}} Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}
+             <a href ="/mi-familia/actualizar/{{ familiar.id }}">Actualizar</a>
+             <a href ="/mi-familia/borrar/{{ familiar.id }}">Borrar</a>
+         </li>
+     {% endfor %}
+     </ul>
 {% endblock %}
