actualizo proyecto final, mascotas y autos

--- a/ejemplo/templates/ejemplo/buscar_mascotas.html
+++ b/ejemplo/templates/ejemplo/buscar_mascotas.html
@@ -13,5 +13,7 @@ Buscar Mascotas
     <ul>
         <li> Nombre: {{mascota.nombre}}, Tipo: {{mascota.tipo}}, Raza: {{mascota.raza}}, Edad: {{mascota.edad}}</li>
     </ul>
+
+    <a href="/mis-mascotas">Volver a la lista de mascotas</a>
 {% endfor %}
 {% endblock %}
