--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -3,6 +3,9 @@
 {% block contenido %}
 {% if user.is_authenticated %}
     <a href="{% url 'ejemplo-dos-crear' %}">Crear Post</a>
+    <a href="{% url 'ejemplo-dos-avatars-actualizar' user.id %}">Actualizar Avatar</a>
+    <a href="{% url 'ejemplo-dos-users-actualizar' user.id %}">Actualizar Profile</a>
+    <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Mensajes</a>
 {% endif %}
 <ul>
 {% for post in object_list %}
