--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -3,7 +3,9 @@
 {% block contenido %}
 {% if user.is_authenticated %}
     <a href="{% url 'ejemplo-dos-crear' %}">Crear Post</a>
-    <a href="{% url 'ejemplo-dos-avatars-actualizar' user.id %}">Actualizar Avatar</a>
+    {% if user.avatar.imagen %}
+        <a href="{% url 'ejemplo-dos-avatars-actualizar' user.id %}">Actualizar Avatar</a>
+    {% endif %}
     <a href="{% url 'ejemplo-dos-users-actualizar' user.id %}">Actualizar Profile</a>
     <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Mensajes</a>
 {% endif %}
@@ -11,7 +13,7 @@
 {% for post in object_list %}
     <li>
         {{post.publicado_el}} - - {{post.titulo}}  
-        {% if user.is_authenticated %}
+        {% if user.is_superuser %}
             <a href="{% url 'ejemplo-dos-borrar' post.id %}">Borrar</a>
             <a href="{% url 'ejemplo-dos-actualizar' post.id %}">Actualizar</a>
         {% endif %}
